# cv_jd_matching

./: .dockerignore  .env.example  .gitignore  ADVANCED_EXPLAINABILITY_GUIDE.md  MIGRATION_SETUP.md  Makefile  README.md  RESULTS.md  alembic.ini  deploy_k8s.sh  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  run_tests.sh  setup.sh  start_k8s.sh  verify_batch.py  verify_batch_optimization.py  verify_langgraph.py
alembic/: README_MIGRATIONS.md  env.py
api/: main.py
core/: configs.py  pipeline.py
docs/: SUPER_ADVANCED_SYSTEM.md  database_access.md
infra/: Dockerfile  README.md  SCALING_GUIDE.md  docker-compose.yml  init_db.sql
latex/: bibliography.bib  report.tex
notebooks/: performance_comparison.ipynb
scripts/: add_application_table.py  add_batch_job_table.py  add_indexes.py  add_is_premium_column.py  check_schema.py  create_admin.py  csv_to_job_jsons.py  evaluate_parsing_quality.py  evaluation_pipeline.py  generate_dummy_cvs.py  init_tables.py  json_job_to_db.py  locust_load_test.py  post_jobs_from_json.py  prepare_yolo_data.py  process_external_data.py  run_evaluation.py  setup_enhanced_system.sh  test_api.py  test_enhanced_matching.py  test_evaluator.py  test_evaluator_kaggle.py  test_external_processor.py  test_extractor.py  test_full_evaluator.py  test_layout_parser.py  test_migrations.sh  test_parsing_evaluation.py  test_pipeline.py  train_yolo.py  update_schema.py  upload_cvs.py  upload_cvs_and_match.py  verify_generator.py
tests/: BATCH_TESTING_GUIDE.md  LOAD_TESTING.md  README.md  conftest.py  (+13 more)
(+133 files in other folders)
